[chore] update notebooks train model

--- a/notebooks/Emotion.ipynb
+++ b/notebooks/Emotion.ipynb
@@ -448,7 +448,7 @@
         "# define optimizer\n",
         "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
         "\n",
-        "# Nếu Val Accuracy không tăng sau 5 epoch, giảm LR đi một nửa\n",
+        "# Nếu Val Accuracy không tăng sau 5 epoch, giảm LR đi một nửa -> chọn accuracy cang lon con tot\n",
         "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='max', factor=0.2, patience=5)"
       ],
       "metadata": {
@@ -520,11 +520,14 @@
         "\n",
         "\n",
         "    # Trong vòng lặp train, sau khi eval xong:\n",
-        "    scheduler.step(avg_val_loss)\n",
+        "    scheduler.step(val_acc)\n",
+        "\n",
+        "    # Lấy LR hiện tại để in ra (kiểm tra scheduler có hoạt động không)\n",
+        "    current_lr = optimizer.param_groups[0]['lr']\n",
         "\n",
         "    # In kết quả tổng kết sau 1 Epoch\n",
         "    print(f\"Result -> Train Loss: {avg_train_loss:.4f} | Train Acc: {train_acc:.2f}%\")\n",
-        "    print(f\"          Val Loss: {avg_val_loss:.4f}   | Val Acc: {val_acc:.2f}%\")\n",
+        "    print(f\"          Val Loss: {avg_val_loss:.4f}   | Val Acc: {val_acc:.2f}% | LR: {current_lr:.6f}\")\n",
         "\n",
         "    # Lưu lại model tốt nhất (Best Model)\n",
         "    if val_acc > best_accuracy:\n",
@@ -537,7 +540,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I2_2UDhWr5E_",
-        "outputId": "08fe58a7-1bd9-477a-ff36-58ff5a0365f3"
+        "outputId": "dffcacac-ae7b-4877-df82-2ba8c61e605e"
       },
       "execution_count": null,
       "outputs": [
@@ -552,7 +555,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Loss: 1.8712:   9%|▉         | 26/289 [09:29<1:19:39, 18.17s/it]"
+            "Loss: 1.2438:  52%|█████▏    | 149/289 [03:31<02:53,  1.24s/it]"
           ]
         }
       ]
